<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPrimaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/movie_title_padding"
            android:text="@string/details_movie_title"
            android:textSize="@dimen/movie_title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_movie_poster_details_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/details_poster_image_height"
                android:layout_margin="@dimen/details_poster_image_layout_margin"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_movie_poster" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_5">

                <TextView
                    android:id="@+id/detail_movie_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:text="@string/details_release_date"
                    android:textSize="@dimen/details_text_size" />

                <TextView
                    android:id="@+id/detail_movie_vote_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:text="@string/details_vote_average"
                    android:textSize="@dimen/details_text_size" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/detail_movie_plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/plot_synopsis_layout_padding"
            android:text="@string/details_plot_synopsis"
            android:textSize="@dimen/details_text_size" />
    </LinearLayout>

</ScrollView>